--- a/public/chat.html
+++ b/public/chat.html
@@ -10,7 +10,7 @@
 <body>
   <div class="chat-container">
     <header class="chat-header">
-      <h1><i class="fas fa-smile"></i> ChatCord</h1>
+      <h1><i class="fas fa-smile"></i> Chat Box</h1>
       <a href="index.html" class="btn">Leave Room</a>
     </header>
     <main class="chat-main">
@@ -18,13 +18,7 @@
         <h3><i class="fas fa-comments"></i> Room Name:</h3>
         <h2 id="room-name">JavaScript</h2>
         <h3><i class="fas fa-users"></i> Users</h3>
-        <ul id="users">
-          <li>Brad</li>
-          <li>John</li>
-          <li>Mary</li>
-          <li>Paul</li>
-          <li>Mike</li>
-        </ul>
+        <ul id = users></ul>
       </div>
       <div class="chat-messages">
       </div>
