--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
 	<body>
 		<div class="join-container">
 			<header class="join-header">
-				<h1><i class="fas fa-smile"></i> ChatCord</h1>
+				<h1><i class="fas fa-smile"></i>Chat Box</h1>
 			</header>
 			<main class="join-main">
 				<form action="chat.html">
@@ -35,10 +35,9 @@
 						<select name="room" id="room">
 							<option value="JavaScript">JavaScript</option>
 							<option value="Python">Python</option>
-							<option value="PHP">PHP</option>
-							<option value="C#">C#</option>
-							<option value="Ruby">Ruby</option>
 							<option value="Java">Java</option>
+							<option value="C">C</option>
+							<option value="Go">Go</option>
 						</select>
 					</div>
 					<button type="submit" class="btn">Join Chat</button>
